--- a/build.gradle
+++ b/build.gradle
@@ -5,20 +5,33 @@ plugins {
 }
 
 group 'org.fulib'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.29'
+    // https://mvnrepository.com/artifact/org.fulib/fulibScenarios
+    fulibScenarios group: 'org.fulib', name: 'fulibScenarios', version: '1.7.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    // https://mvnrepository.com/artifact/org.fulib/fulibTools
+    testImplementation group: 'org.fulib', name: 'fulibTools', version: '1.5.1'
+
+    // https://mvnrepository.com/artifact/org.fulib/fulibTables
+    testImplementation group: 'org.fulib', name: 'fulibTables', version: '1.4.0'
+
+    // https://mvnrepository.com/artifact/org.fulib/fulibMockups
+    testImplementation group: 'org.fulib', name: 'fulibMockups', version: '0.4.0'
+
+    // https://mvnrepository.com/artifact/junit/junit
+    testImplementation group: 'junit', name: 'junit', version: '4.13'
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
+    testImplementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
 }
 
-test {
-    useJUnitPlatform()
+generateScenarioSource {
+    classDiagramSVG = true
 }
