--- a/src/gen/resources/workflow.es.yaml
+++ b/src/gen/resources/workflow.es.yaml
@@ -1,12 +1,15 @@
 - workflow: Testerino
 
 - event: do something
+  testerino: swasda
+  gasdfwad: asfasd
+  wadasda: wadsdw
+  wadfasgfaqs: asdagdg
+  Wbgsdfaa: adawdas
 
 - page:
     - name: Testerino
     - label: This is a test page
     - input: Username
     - input: Password
-      fill: 1234
     - button: Login
-      command: start login
