--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.antlr/ST4
+    implementation group: 'org.antlr', name: 'ST4', version: '4.3.1'
+
     // https://mvnrepository.com/artifact/org.fulib/fulibScenarios
     fulibScenarios group: 'org.fulib', name: 'fulibScenarios', version: '1.7.0'
 
