--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.antlr/ST4
     implementation group: 'org.antlr', name: 'ST4', version: '4.3.1'
 
+    // https://mvnrepository.com/artifact/org.antlr/antlr4-runtime
+    implementation group: 'org.antlr', name: 'antlr4-runtime', version: '4.9.3'
+
     // https://mvnrepository.com/artifact/org.fulib/fulibScenarios
     fulibScenarios group: 'org.fulib', name: 'fulibScenarios', version: '1.7.0'
 
