--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'antlr'
+    id 'idea'
     // https://plugins.gradle.org/plugin/org.fulib.fulibGradle
     id 'org.fulib.fulibGradle' version '0.5.0'
 }
@@ -43,4 +44,25 @@ dependencies {
 
 generateScenarioSource {
     classDiagramSVG = true
+}
+
+// Source: https://tomassetti.me/antlr-mega-tutorial/#chapter18
+generateGrammarSource {
+    maxHeapSize = "128m"
+    arguments += ['-package', 'org.fulib.workflows.yaml', '-visitor', '-no-listener']
+}
+compileJava.dependsOn generateGrammarSource
+sourceSets {
+    generated {
+        java.srcDir 'generated-src/antlr/main/'
+    }
+}
+compileJava.source sourceSets.generated.java, sourceSets.main.java
+clean{
+    delete "generated-src"
+}
+idea {
+    module {
+        sourceDirs += file("generated-src/antlr/main/")
+    }
 }
