--- a/src/gen/resources/workflows.es.yaml
+++ b/src/gen/resources/workflows.es.yaml
@@ -1,6 +1,6 @@
 - workflow: Testerino
 
-- externalSystem: hohohohoho
+- externalSystem: höhÖhähÄhüHÜhß
 
 - service: TestinService
 
@@ -41,7 +41,7 @@
 - page:
     - name: Register
     - text: Please register yourself
-    - input: E Mail
+    - input: E-Mail
     - input: Username
     - password: Password
     - password: Repeat Password
@@ -50,7 +50,7 @@
 - page:
     - name: Login
     - text: Welcome back
-    - input: Username or E Mail
+    - input: Username/E-Mail
     - password: Password
     - button: Login
 
