add new publishing method similar to fulib

--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,73 @@
+// --------------- Plugins ---------------
+
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
     id 'antlr'
     id 'idea'
     // https://plugins.gradle.org/plugin/org.fulib.fulibGradle
     id 'org.fulib.fulibGradle' version '0.5.0'
+    // https://plugins.gradle.org/plugin/io.github.gradle-nexus.publish-plugin
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
+// --------------- General Settings ---------------
+
 group 'org.fulib'
-version '1.0.0'
+version = 'git describe --tags'.execute([], rootDir).text[1..-2] // strip v and \n
+description = 'fulibWorkflows is tool to generate mockups and object-/class-diagrams from a workflow description.'
+
+// --------------- Dependencies ---------------
 
 repositories {
     mavenLocal()
     mavenCentral()
+}
+
+nexusPublishing {
+    repositories {
+        sonatype()
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            pom {
+                name = project.name
+                description = project.description
+                url = 'https://github.com/fujaba/fulibWorkflows'
+                inceptionYear = '2019'
+
+                scm {
+                    url = 'https://github.com/fujaba/fulibWorkflows'
+                }
+
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://www.opensource.org/licenses/mit-license.php'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'zuendorf'
+                        name = 'Albert Zuendorf'
+                    }
+                    developer {
+                        id = 'Clashsoft'
+                        name = 'Adrian Kunz'
+                    }
+                    developer {
+                        id = 'Kuenssi'
+                        name = 'Maximilian Freiherr von Künßberg'
+                    }
+                }
+            }
+        }
+    }
 }
 
 dependencies {
@@ -45,6 +101,8 @@ dependencies {
 generateScenarioSource {
     classDiagramSVG = true
 }
+
+// --------------- ANTLR ---------------
 
 // Source: https://tomassetti.me/antlr-mega-tutorial/#chapter18
 generateGrammarSource {
