--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,19 @@
 
 plugins {
     id 'java-library'
-//    id 'maven-publish'
+    id 'maven-publish'
     id 'antlr'
     id 'idea'
     // https://plugins.gradle.org/plugin/org.fulib.fulibGradle
     id 'org.fulib.fulibGradle' version '0.5.0'
     // https://plugins.gradle.org/plugin/io.github.gradle-nexus.publish-plugin
-//    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
 // --------------- General Settings ---------------
 
 group = 'org.fulib'
-//version = 'git describe --tags'.execute([], rootDir).text[1..-2] // strip v and \n
+version = 'git describe --tags'.execute([], rootDir).text[1..-2] // strip v and \n
 description = 'fulibWorkflows is tool to generate mockups and object-/class-diagrams from a workflow description.'
 
 // --------------- Dependencies ---------------
@@ -24,51 +24,51 @@ repositories {
     mavenCentral()
 }
 
-//nexusPublishing {
-//    repositories {
-//        sonatype()
-//    }
-//}
-//
-//publishing {
-//    publications {
-//        mavenJava(MavenPublication) {
-//            from(components.java)
-//            pom {
-//                name = project.name
-//                description = project.description
-//                url = 'https://github.com/fujaba/fulibWorkflows'
-//                inceptionYear = '2019'
-//
-//                scm {
-//                    url = 'https://github.com/fujaba/fulibWorkflows'
-//                }
-//
-//                licenses {
-//                    license {
-//                        name = 'MIT License'
-//                        url = 'https://www.opensource.org/licenses/mit-license.php'
-//                    }
-//                }
-//
-//                developers {
-//                    developer {
-//                        id = 'zuendorf'
-//                        name = 'Albert Zuendorf'
-//                    }
-//                    developer {
-//                        id = 'Clashsoft'
-//                        name = 'Adrian Kunz'
-//                    }
-//                    developer {
-//                        id = 'Kuenssi'
-//                        name = 'Maximilian Freiherr von Kuenssberg'
-//                    }
-//                }
-//            }
-//        }
-//    }
-//}
+nexusPublishing {
+    repositories {
+        sonatype()
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from(components.java)
+            pom {
+                name = project.name
+                description = project.description
+                url = 'https://github.com/fujaba/fulibWorkflows'
+                inceptionYear = '2019'
+
+                scm {
+                    url = 'https://github.com/fujaba/fulibWorkflows'
+                }
+
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://www.opensource.org/licenses/mit-license.php'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'zuendorf'
+                        name = 'Albert Zuendorf'
+                    }
+                    developer {
+                        id = 'Clashsoft'
+                        name = 'Adrian Kunz'
+                    }
+                    developer {
+                        id = 'Kuenssi'
+                        name = 'Maximilian Freiherr von Kuenssberg'
+                    }
+                }
+            }
+        }
+    }
+}
 
 dependencies {
     // https://mvnrepository.com/artifact/org.antlr/ST4
