Object diagrams contain all objects now.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ local.properties
 /src/*/scenarios/**/*.svg
 /src/*/scenarios/**/*.txt
 /src/*/scenarios/**/*.yaml
+.vscode/settings.json
+.vscode/launch.json
