--- a/src/gen/resources/microshop.es.yaml
+++ b/src/gen/resources/microshop.es.yaml
@@ -1,4 +1,4 @@
-- workflow: smooth case
+- workflow: store products
 
 - user: Peter Picker
 
@@ -6,7 +6,9 @@
     - pageName: Warehouse overview
     - text: Warehouse Home
     - button: Store Tasks
+      targetPage: Warehouse store tasks
     - button: Pick Tasks
+      targetPage: Warehouse pick tasks
 
 
 - page:
@@ -48,7 +50,7 @@
   location: shelf_42
 
 - data: WHProduct red_shoes
-  itemName: red_shoes
+  itemName: red shoes
   amount: 10
 
 - event: product stored
@@ -64,7 +66,7 @@
   state: in stock
 
 - page:
-    - pageName: Warehouse store tasks
+    - pageName: Warehouse store tasks 2
     - text: Warehouse palettes
     - button: add
     - text: b001, 10 red_shoes, shelf_42
@@ -73,9 +75,13 @@
     - pageName: Warehouse add palette
     - text: Store new palette
     - input: barcode
+      fill: b002
     - input: product
+      fill: red_shoes
     - input: amount
+      fill: O8
     - input: location
+      fill: shelf_23
     - button: ok
 
 - service: Warehouse
@@ -86,8 +92,8 @@
   amount: 8
   location: shelf_23
 
-- data: WHProduct wPro2
-  itemName: red_shoes
+- data: WHProduct red_shoes
+  itemName: red shoes
   amount: 18
 
 - event: product stored
@@ -97,8 +103,8 @@
 
 - service: MicroShop
 
-- data: MSProduct mPro2
-  itemName: red_shoes
+- data: MSProduct ms_red_shoes
+  itemName: red shoes
   amount: 18
   state: in stock
 
@@ -113,21 +119,25 @@
     - pageName: Warehouse add palette
     - text: Store new palette
     - input: barcode
+      fill: b003
     - input: product
+      fill: blue_jeans
     - input: amount
+      fill: O6
     - input: location
+      fill: shelf_1337
     - button: ok
 
 - service: Warehouse
 
-- data: Palette p3
+- data: Palette p003
   barcode: b003
   product: blue_jeans
   amount: 6
   location: shelf_1337
 
-- data: WHProduct wPro3
-  itemName: blue_jeans
+- data: WHProduct blue_jeans
+  itemName: blue jeans
   amount: 6
 
 - event: product stored
@@ -137,8 +147,8 @@
 
 - service: MicroShop
 
-- data: MSProduct mPro3
-  itemName: blue_jeans
+- data: MSProduct ms_blue_jeans
+  itemName: blue jeans
   state: in stock
   amount: 6
 
@@ -150,25 +160,41 @@
     - text: b002, red_shoes, shelf_23
     - text: b001, red_shoes, shelf_42
 
+
+
+
 - user: Sabine Sales
 
 - page:
-    - pageName: MicroShop offers
+    - pageName: MicroShop offers 1
     - text: Offers overview
-    - button: add
-    - text: no offers yet
+    - button: edit
+      targetPage: MicroShop edit offer 1
+    - text: We offer  6 blue jeans for 0
+    - text: We offer 18 red shoes for 0
 
 - page:
-    - pageName: MicroShop add offer
-    - text: make new offer
+    - pageName: MicroShop edit offer 1
+    - text: Edit offer
     - input: product
     - input: price
-    - button: ok
+    - button: Submit
+      targetPage: MicroShop edit offer 2
+
+- page:
+    - pageName: MicroShop edit offer 2
+    - text: Edit offer
+    - input: product
+      fill: red_shoes
+    - input: price
+      fill: O42
+    - button: Submit
+      targetPage: MicroShop offers 2
 
 - service: MicroShop
 
-- data: MSProduct mpro4
-  itemName: red_shoes
+- data: MSProduct ms_red_shoes
+  itemName: red shoes
   price: 42
 
 - event: product offered
@@ -176,22 +202,28 @@
   price: 42
 
 - page:
-    - pageName: MicroShop offers
+    - pageName: MicroShop offers 2
     - text: Offers overview
-    - button: add
-    - text: red_shoes, 42
+    - button: edit
+      targetPage: MicroShop edit offer 3
+    - text: We offer  6 blue jeans for 0
+    - text: We offer 18 red shoes for 42
+
 
 - page:
-    - pageName: MicroShop add offer
-    - text: make new offer
+    - pageName: MicroShop edit offer 3
+    - text: Edit offer
     - input: product
+      fill: blue_jeans
     - input: price
-    - button: ok
+      fill: O63
+    - button: Submit
+      targetPage: MicroShop offers 3
 
 - service: MicroShop
 
-- data: MSProduct mpro4
-  itemName: blue_jeans
+- data: MSProduct ms_blue_jeans
+  itemName: blue jeans
   price: 63
 
 - event: product offered
@@ -199,47 +231,63 @@
   price: 63
 
 - page:
-    - pageName: MicroShop offers
+    - pageName: MicroShop offers 3
     - text: Offers overview
-    - button: add
-    - text: red_shoes, 42
-    - text: blue_jeans, 63
+    - button: edit
+      targetPage: MicroShop 1
+    - text: We offer  6 blue jeans for 63
+    - text: We offer 18 red shoes for 42
 
 
 - user: Carli_Customer
 
 - page:
-    - pageName: MicroShop offers
+    - pageName: MicroShop 1
     - text: Welcome to our micro shop
     - text: We have
     - text: red_shoes for 42
     - text: blue_jeans for 63
     - button: order
+      targetPage: MicroShop buy 1
 
 - page:
-    - pageName: MicroShop buy
+    - pageName: MicroShop buy 1
     - text: Welcome to our micro shop
     - input: product
+      fill: red_shoes
     - input: customer
     - input: address
     - button: buy
+      targetPage: MicroShop buy 2
+
+- page:
+    - pageName: MicroShop buy 2
+    - text: Welcome to our micro shop
+    - input: product
+      fill: red_shoes
+    - input: customer
+      fill: Carli_Customer
+    - input: address
+      fill: Wonderland 1
+    - button: buy
+      targetPage: MicroShop Carli overview 1
 
 - service: MicroShop
 
 - data: Order o1
   code: o0925_1
-  product: red_shoes
+  product: ms_red_shoes
   product.back: [orders]
   customer: Carli_Customer
   customer.back: [orders]
   address: Wonderland 1
   state: new order
 
-- data: Customer carli
-  itemName: Carli_Customer
+- data: Customer Carli_Customer
+  itemName: Carli Customer
 
-- data: MSProduct mPro5
-  itemName: red_shoes
+- data: MSProduct ms_red_shoes
+  itemName: red shoes
   amount: 17
 
 - event: product ordered
@@ -271,7 +319,7 @@
 
 
 - page:
-    - pageName: MicroShop Carli overview
+    - pageName: MicroShop Carli overview 1
     - text: Welcome Carli
     - text: Your orders are
     - text: red_shoes for 42, picking
