--- a/src/gen/resources/examples/types.es.yaml
+++ b/src/gen/resources/examples/types.es.yaml
@@ -9,4 +9,11 @@
       fill: 420
     - button: nice
 
-- event: Testerino Schmesterino
+- service: "#StudyGuide"
+
+- event: numbers, just numbers
+
+- data: Testerino Schmesterino
+  motivation: "#83"
+  credits: 69
+  name: Albert Zündorf
