--- a/src/gen/resources/examples/webeditor/dataModelling.es.yaml
+++ b/src/gen/resources/examples/webeditor/dataModelling.es.yaml
@@ -9,28 +9,30 @@
 
 - data: Stop stop1
   motivation: 66
+  student: carli
   room: r1
   room.back: "[stops]"
 
 - data: Room r1
   topic: math
   credits: 17
-  neighbors: "[r2, r5]"
+  stop: stop1
+  neighbors: "[r2, r4]"
   neighbors.back: "[neighbors]"
 
 - data: Room r2
   topic: calculus
   credits: 20
-  neighbors: "[r1, r5]"
+  neighbors: "[r1, r4]"
+
+- data: Room r3
+  topic: exam
+  neighbors: "[r4]"
 
 - data: Room r4
-  topic: exam
-  neighbors: "[r5]"
-
-- data: Room r5
   topic: modeling
   credits: 29
-  neighbors: "[r1, r2, r4]"
+  neighbors: "[r1, r2, r3]"
 
 - command: findRoute
 
